--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .card {
   width: 100%;
   background: #222222;
-  background-image: url(../img/logo.png);
+  background-image: url(../img/img.png);
   padding: 5px 0;
   color: #ffffff;
   float: left;
