--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,34 @@
-.card {
+body {
   width: 100%;
-  background: #222222;
-  background-image: url(../img/img.png);
-  padding: 5px 0;
-  color: #ffffff;
-  float: left;
-  border-radius: 8px;
+  height: 100%;
+  padding: 50px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(4, 20, 36);
+  overflow: hidden;
 }
 
-.card__text {
+.card {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  border-radius: 15px;
+  color: #fffff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.6);
+}
+
+.card-image {
+  order: 1;
+  border-radius: 15%;
+}
+
+.card-text {
+  order: 2;
+  background-color: rgba(236, 214, 11, 0.836);
+  color: black;
   width: 50%;
-  background-color: rgb(231, 179, 7);
-  padding: 5px 0;
-  float: right;
   text-align: center;
-  font-weight: 100;
+  justify-content: center;
 }
