--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,15 @@
+/* {
+  border: 1px solid red;
+}
+*/
+
 body {
-  width: 100%;
-  height: 100%;
-  padding: 50px 0;
-  display: flex;
+  margin: 50px;
   align-items: center;
   justify-content: center;
-  background: rgb(4, 20, 36);
-  overflow: hidden;
-}
-
-.card {
-  display: flex;
-  flex-direction: row;
-  padding: 0;
-  border-radius: 15px;
-  color: #fffff;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.6);
+  background: #ffffff;
 }
 
 .card-image {
-  order: 1;
-  border-radius: 15%;
-}
-
-.card-text {
-  order: 2;
-  background-color: rgba(236, 214, 11, 0.836);
-  color: black;
-  width: 50%;
-  text-align: center;
-  justify-content: center;
-}
-
-.card-text span {
-  font-size: 15px;
-  font-weight: 20px;
+  background: url('../img/mtn.png');
 }
