--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,34 @@
-/* {
-  border: 1px solid red;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-*/
 
 body {
-  margin: 50px;
-  align-items: center;
+  display: flex;
   justify-content: center;
-  background: #ffffff;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #ffce44, #d0a83b);
 }
 
-.card-image {
-  background: url('../img/mtn.png');
+.card {
+  position: relative;
+  width: 600px;
+  height: 350px;
+  margin: 20px;
+  transition: 0.5s;
+  border-radius: 50px;
+  background: linear-gradient(135deg, #ffce44, #d0a83b);
+  box-shadow: 50px;
+  transition: 0.5s;
+}
+
+.card img {
+  height: 100%;
+  border-radius: 50px;
+}
+
+.card:hover img {
 }
